--- a/styles/BookingSection.module.scss
+++ b/styles/BookingSection.module.scss
@@ -3,9 +3,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  //width: 100%;
   height: 100%;
-  margin: 4rem 2rem;
+  margin: 4rem 0;
   .main-container_item1 {
     flex-grow: 2;
   }
