--- a/styles/Schedule.module.scss
+++ b/styles/Schedule.module.scss
@@ -1,2 +1,12 @@
 .main-container {
+  padding: 0.5rem;
+  .row-container {
+    border-radius: 6px;
+    border: 0.01rem solid;
+    margin: 0.2rem 0;
+
+    &:hover {
+      background-color: #0462fa44;
+    }
+  }
 }
